--- a/index.html
+++ b/index.html
@@ -44,28 +44,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 </head>
     <h2></h2>
     
-    <datalist id="topics">
-        <option value="fungi">
-        <option value="animalia">
-        <option value="protist">
-        <option value="eukaryote">
-        <option value="prokaryote">
-        <option value="invertebrate">
-        <option value="vertebrate">
-        <option value="primitive soup">
-        <option value="the first organic molecules">
-        <option value="australopithecus">
-        <option value="homo habilis">
-        <option value="homo erectus">
-        <option value="homo neanderthalensis">
-        <option value="homo sapiens">
-    </datalist>
+    
     <h2 style ="color:mediumSeaGreen;">esta pagina es para aprender de biologia </h2>
 <h2></h2>
 
-<h1></h1>
-<h3 style="color:mediumseagreen">Search page the page web exactly:</h3>
-<input type="text" id="search" list="topics" placeholder="Type to search...">
 
     <h2 style="color:mediumseagreen"> reinos: </h2>
     <h1></h1>
@@ -368,10 +350,9 @@ scroll-behavior: smooth;
 }
 
 body{
-background-color: #77aa77;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(200,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1' gradientTransform='rotate(256,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2' gradientTransform='rotate(267,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.8'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+background:linear-gradient(
+#072438f3, 
+rgb(0, 0, 0));
 }
 
 </style>
