--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ scroll-behavior: smooth;
 }
 
 body{
-background:linear-gradient(rgb(68, 33, 223),firebrick)
+background:linear-gradient(rgb(123, 113, 255),firebrick)
 }
 
 h2{
@@ -373,14 +373,14 @@ font-family:arial;
 h1{
 
 background:#2b5fd1;
-background: radial-gradient(rgb(76, 133, 255),#7affa7);
+background: radial-gradient(rgb(113, 175, 255),#33ff00);
 font-size:3rem;
 color:rgb(50, 105, 255) ;
 -webkit-text-fill-color:
 transparent;
 font-family:arial;
 -webkit-background-clip: text;
-box-shadow:5px 5px 10px 5px rgb(56, 205, 255) inset;
+box-shadow:5px 5px 10px 5px #7de5ff inset;
 
 }
 .img-02{
